--- a/src/index.css
+++ b/src/index.css
@@ -158,7 +158,7 @@ body {
 
     .bento-title {
       font: "Bebas Neue";
-      font-size: 4rem;
+      font-size: 2rem;
       font-weight: 700;
       color: white;
       margin-bottom: 0.5rem;
@@ -232,6 +232,14 @@ body {
       max-width: 35rem;
       font-size: 2.5rem; /* Tailwind's text-xl = 1.25rem (20px) */
       margin-bottom: 2rem; /* Tailwind's mb-8 = 2rem (32px) */
+    }
+
+    .bento-title {
+      font: "Bebas Neue";
+      font-size: 3rem;
+      font-weight: 700;
+      color: white;
+      margin-bottom: 0.5rem;
     }
   }
 
